# plug-lens

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  Makefile.build  README.en.md  README.md  README_zh-CN.md  SKILL(因国内账号问题,本项目暂未使用).md  SKILL.md  action.md  custom_sections.lds  updata.md
.trae/: design_planning.md
.trae/rules/: 99-security-redline.md
.trae/skills/: .em_skill_meta.json
BSP/: Makefile
BSP/v4l2_video/: v1_0.md
app/: Makefile
app/inc/: main.h
app/main/: main.c
common/: Makefile
common/configs/: board_option.h  build_config.mk  config_common.h  main.h  vision_ai_config.h
docs/: CONTRIBUTING.en.md  CONTRIBUTING.md  Framework.md  architecture.md  debug.txt  now_debug.md  performance_report.md  quick_start_zh-CN copy.md  quick_start_zh-CN.md  quick_start_zh-CN_aarch64.md  quick_start_zh-CN_imx6ull.md  quick_start_zh-CN_rk3562.md  waitme.md
documents/: CONTRIBUTING.md  architecture copy.md  architecture.md  cpu_optimize.md  cur_issue.md  debug.txt  details.md  flowchart.js  inventory.md  soul_in_me.md  use_details.md  video.md
lib/: Makefile
lib/inc/: log.h
output/: vision_ai_app
plugins/: Makefile
plugins/service_plugins/face_detect_srv/src/src/: CMakeLists.txt  UltraFace.cpp  UltraFace.hpp  main.cpp
scripts/: .gdbinit  all_project_code.txt  catalog_tree.txt  copy_to_nfs.sh  core_project_code.txt  luo@Luo1469 ~linux6ullprojectperipheral_vision_ai_acquisition_terminal.txt  monitor.sh  print_all_src.sh  print_arch_src.sh  print_core_src.sh  print_tree.sh  project_arch_code.txt  receive.py
src/: Makefile
third_lib/: third_lib.mk
(+307 files in other folders)
